--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>CSS Layout</title>
-        <link rel="stylesheet" href="testFlexStyle.css" />
+
+        <link rel="stylesheet" href="testStyle.css" />
     </head>
     <body>
-        <div class="theGrid">
+        <div class="mainContainer">
             <div class="topPart">
                 <div class="gameTitle">
                     <h1>GUESS MY NUMBER!</h1>
@@ -23,7 +24,7 @@
             </div>
             <div class="bottomPart">
                 <div class="inputPart">
-                    <div class="inputLabel">
+                    <div class="inputLabel label">
                         Enter a number:
                     </div>  
                     <input type="number" class="inputNumber"></input>
@@ -37,7 +38,7 @@
                     </div>
                     <div class="label">Score:</div>
                     <div class="scoreBox">
-                        <p class="score">Score: 20</p>
+                        <p class="score">20</p>
                     </div>
                     <div class="label">Highest Score:</div>
                     <div class="highestScoreBox">
